[package]
name = "lemmy_api_routes"
publish = false
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
actix-web= { workspace = true }
lemmy_api = { workspace = true }
lemmy_api_crud = { workspace = true }
lemmy_apub = { workspace = true }
lemmy_routes = { workspace = true }
lemmy_utils = { workspace = true }

