[package]
name = "lemmy_api_utils"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[lib]
name = "lemmy_api_utils"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[features]
full = [
  "once_cell",
  "tokio",
  "tracing",
  "extism",
  "extism-convert",
  "lemmy_db_views_plugin_metadata/full",
  "lemmy_db_views_link_metadata/full",
  "lemmy_db_views_open_graph_data/full",
  "lemmy_db_views_community/full",
  "lemmy_db_views_community_follower/full",
  "lemmy_db_views_community_moderator/full",
  "lemmy_db_views_community_person_ban/full",
  "lemmy_db_views_community_response/full",
  "lemmy_db_views_local_image/full",
  "lemmy_db_views_local_user/full",
  "lemmy_db_views_person/full",
  "lemmy_db_views_site/full",
  "lemmy_db_views_ban_from_community/full",
  "lemmy_db_views_delete_post/full",
  "lemmy_db_views_private_message/full",
  "lemmy_db_views_federated_instances/full",
  "lemmy_db_views_instance_with_federation_state/full",
  "lemmy_db_views_comment/full",
  "lemmy_db_views_comment_response/full",
  "lemmy_db_views_post/full",
  "lemmy_db_views_post_response/full",
  "serde_json",
  "lemmy_db_schema/full",
  "lemmy_db_schema_file/full",
  "reqwest-middleware",
  "activitypub_federation",
  "mime",
  "encoding_rs",
  "futures",
  "reqwest",
  "actix-web",
  "actix-web-httpauth",
  "moka",
  "webmention",
  "webpage",
  "jsonwebtoken",
]

[dependencies]
lemmy_db_schema = { workspace = true }
lemmy_db_schema_file = { workspace = true }
lemmy_db_views_plugin_metadata = { workspace = true }
lemmy_db_views_link_metadata = { workspace = true }
lemmy_db_views_open_graph_data = { workspace = true }
lemmy_db_views_community = { workspace = true }
lemmy_db_views_community_follower = { workspace = true }
lemmy_db_views_community_moderator = { workspace = true }
lemmy_db_views_community_person_ban = { workspace = true }
lemmy_db_views_community_response = { workspace = true }
lemmy_db_views_ban_from_community = { workspace = true }
lemmy_db_views_local_image = { workspace = true }
lemmy_db_views_local_user = { workspace = true }
lemmy_db_views_person = { workspace = true }
lemmy_db_views_site = { workspace = true }
lemmy_db_views_delete_post = { workspace = true }
lemmy_db_views_private_message = { workspace = true }
lemmy_db_views_federated_instances = { workspace = true }
lemmy_db_views_instance_with_federation_state = { workspace = true }
lemmy_db_views_comment = { workspace = true }
lemmy_db_views_comment_response = { workspace = true }
lemmy_db_views_post = { workspace = true }
lemmy_db_views_post_response = { workspace = true }
lemmy_email = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
once_cell = { version = "1.21.3", optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
lemmy_utils = { workspace = true }
extism = { git = "https://github.com/extism/extism.git", branch = "pool", optional = true }
extism-convert = { git = "https://github.com/extism/extism.git", branch = "pool", optional = true }
reqwest-middleware = { workspace = true, optional = true }
activitypub_federation = { workspace = true, optional = true }
mime = { version = "0.3.17", optional = true }
mime_guess = "2.0.5"
infer = "0.19.0"
chrono = { workspace = true }
encoding_rs = { version = "0.8.35", optional = true }
futures = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
actix-web = { workspace = true, optional = true }
actix-web-httpauth = { version = "0.8.2", optional = true }
enum-map = { workspace = true }
url = { workspace = true }
moka = { workspace = true, optional = true }
webmention = { version = "0.6.0", optional = true }
urlencoding = { workspace = true }
webpage = { version = "2.0", default-features = false, optional = true, features = [
  "serde",
] }
regex = { workspace = true }
jsonwebtoken = { version = "9.3.1", optional = true }
either.workspace = true

[dev-dependencies]
serial_test = { workspace = true }
pretty_assertions = { workspace = true }
