[package]
name = "lemmy_apub"
publish = false
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "lemmy_apub"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
lemmy_db_views_api_misc = { workspace = true, features = ["full"] }
lemmy_db_views_comment = { workspace = true, features = ["full"] }
lemmy_db_views_community = { workspace = true, features = ["full"] }
lemmy_db_views_community_moderator = { workspace = true, features = ["full"] }
lemmy_db_views_community_follower = { workspace = true, features = ["full"] }
lemmy_db_views_post = { workspace = true, features = ["full"] }
lemmy_db_views_local_user = { workspace = true, features = ["full"] }
lemmy_db_views_person = { workspace = true, features = ["full"] }
lemmy_db_views_private_message = { workspace = true, features = ["full"] }
lemmy_db_views_site = { workspace = true, features = ["full"] }
lemmy_db_views_person_content_combined = { workspace = true, features = [
  "full",
] }
lemmy_db_views_search_combined = { workspace = true, features = ["full"] }
lemmy_utils = { workspace = true, features = ["full"] }
lemmy_db_schema = { workspace = true, features = ["full"] }
lemmy_api_utils = { workspace = true }
lemmy_apub_objects = { workspace = true }
activitypub_federation = { workspace = true }
lemmy_db_schema_file = { workspace = true }
diesel = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
actix-web = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde_with.workspace = true
enum_delegate = "0.2.0"
either = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
pretty_assertions = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["futures", "futures-util"]
