[package]
name = "lemmy_apub_lib_derive"
version = "0.15.0"
edition = "2018"
description = "A link aggregator for the fediverse"
license = "AGPL-3.0"
homepage = "https://join-lemmy.org/"
documentation = "https://join-lemmy.org/docs/en/index.html"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0.53", features = ["diff"] }

[dependencies]
proc-macro2 = "1.0.33"
syn = "1.0.82"
quote = "1.0.10"
