[package]
name = "lemmy_db_queries"
version = "0.1.0"
edition = "2018"

[lib]
name = "lemmy_db_queries"
path = "src/lib.rs"
doctest = false

[dependencies]
lemmy_utils = { path = "../utils" }
lemmy_db_schema = { path = "../db_schema" }
diesel = { version = "1.4.5", features = ["postgres","chrono","r2d2","serde_json"] }
diesel_migrations = "1.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = { version = "1.0.61", features = ["preserve_order"] }
strum = "0.20.0"
strum_macros = "0.20.1"
log = "0.4.14"
sha2 = "0.9.3"
url = { version = "2.2.1", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.4.3"
bcrypt = "0.9.0"

[dev-dependencies]
serial_test = "0.5.1"