[package]
name = "lemmy_db_queries"
version = "0.1.0"
edition = "2018"

[lib]
name = "lemmy_db_queries"
path = "src/lib.rs"
doctest = false

[dependencies]
lemmy_utils = { path = "../utils" }
lemmy_db_schema = { path = "../db_schema" }
diesel = { version = "1.4.7", features = ["postgres","chrono","r2d2","serde_json"] }
diesel_migrations = "1.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["preserve_order"] }
strum = "0.21.0"
strum_macros = "0.21.1"
log = "0.4.14"
sha2 = "0.9.5"
url = { version = "2.2.2", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.5.4"
bcrypt = "0.10.0"
tokio = { version = "1.8.0", features = ["rt", "macros"] }
tokio-diesel = { git = "https://github.com/mehcode/tokio-diesel" }

[dev-dependencies]
serial_test = "0.5.1"
