[package]
name = "lemmy_db_queries"
version = "0.12.2-rc.1"
edition = "2018"
description = "A link aggregator for the fediverse"
license = "AGPL-3.0"

[lib]
name = "lemmy_db_queries"
path = "src/lib.rs"
doctest = false

[dependencies]
lemmy_utils = { version = "=0.12.2-rc.1", path = "../utils" }
lemmy_db_schema = { version = "=0.12.2-rc.1", path = "../db_schema" }
diesel = { version = "1.4.7", features = ["postgres","chrono","r2d2","serde_json"] }
diesel_migrations = "1.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.129", features = ["derive"] }
serde_json = { version = "1.0.66", features = ["preserve_order"] }
strum = "0.21.0"
strum_macros = "0.21.1"
log = "0.4.14"
sha2 = "0.9.5"
url = { version = "2.2.2", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.5.4"
bcrypt = "0.10.1"

[dev-dependencies]
serial_test = "0.5.1"
