[package]
name = "lemmy_db_schema_file"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "lemmy_db_schema_file"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[features]
full = ["diesel", "diesel_ltree", "diesel-derive-enum"]
ts-rs = ["dep:ts-rs"]

[dependencies]
serde = { workspace = true }
strum = { workspace = true }
diesel = { workspace = true, optional = true }
diesel_ltree = { workspace = true, optional = true }
ts-rs = { workspace = true, optional = true }
diesel-derive-enum = { workspace = true, optional = true }
