[package]
name = "lemmy_db_views"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[lib]
doctest = false

[features]
full = [
  "lemmy_db_schema/full",
  "diesel",
  "diesel-async",
  "diesel_ltree",
  "tracing",
  "ts-rs",
]

[dependencies]
lemmy_proc_macros = { workspace = true }
lemmy_db_schema = { workspace = true }
diesel = { workspace = true, optional = true }
diesel-async = { workspace = true, optional = true }
diesel_ltree = { workspace = true, optional = true }
serde = { workspace = true }
serde_with = { workspace = true }
tracing = { workspace = true, optional = true }
ts-rs = { workspace = true, optional = true }

[dev-dependencies]
serial_test = { workspace = true }
tokio = { workspace = true }
