[package]
name = "lemmy_db_views_actor"
version = "0.16.5"
edition = "2021"
description = "A link aggregator for the fediverse"
license = "AGPL-3.0"
homepage = "https://join-lemmy.org/"
documentation = "https://join-lemmy.org/docs/en/index.html"
rust-version = "1.57"

[lib]
doctest = false

[features]
full = ["lemmy_db_schema/full", "diesel"]

[dependencies]
lemmy_db_schema = { version = "=0.16.5", path = "../db_schema" }
diesel = { version = "1.4.8", features = ["postgres","chrono","r2d2","serde_json"], optional = true }
serde = { version = "1.0.136", features = ["derive"] }
typed-builder = "0.10.0"
