[package]
name = "lemmy_db_views_actor"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[features]
full = ["lemmy_db_schema/full", "diesel", "diesel-async", "ts-rs"]

[dependencies]
lemmy_db_schema = { workspace = true }
diesel = { workspace = true, features = [
  "postgres",
  "chrono",
  "serde_json",
], optional = true }
diesel-async = { workspace = true, features = [
  "postgres",
  "deadpool",
], optional = true }
serde = { workspace = true }
serde_with = { workspace = true }
ts-rs = { workspace = true, optional = true }
chrono.workspace = true
strum = { workspace = true }
strum_macros = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
tokio = { workspace = true }
pretty_assertions = { workspace = true }
url.workspace = true
lemmy_db_views.workspace = true
lemmy_utils.workspace = true

[package.metadata.cargo-machete]
ignored = ["strum"]
