[package]
name = "lemmy_db_views_inbox_combined"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[features]
full = [
  "lemmy_utils",
  "diesel",
  "diesel-async",
  "ts-rs",
  "i-love-jesus",
  "lemmy_db_schema/full",
  "lemmy_db_schema_file/full",
]

[dependencies]
lemmy_db_views_private_message = { workspace = true }
lemmy_db_schema = { workspace = true }
lemmy_utils = { workspace = true, optional = true }
lemmy_db_schema_file = { workspace = true }
diesel = { workspace = true, optional = true }
diesel-async = { workspace = true, optional = true }
serde = { workspace = true }
ts-rs = { workspace = true, optional = true }
i-love-jesus = { workspace = true, optional = true }
serde_with = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true }
