[package]
name = "lemmy_db_views_moderator"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[features]
full = ["lemmy_db_schema/full", "diesel", "diesel-async", "ts-rs"]

[dependencies]
lemmy_db_schema = { workspace = true }
diesel = { workspace = true, features = [
  "postgres",
  "chrono",
  "serde_json",
], optional = true }
diesel-async = { workspace = true, features = [
  "postgres",
  "deadpool",
], optional = true }
serde = { workspace = true }
serde_with = { workspace = true }
ts-rs = { workspace = true, optional = true }
